# oauth2fast-fastapi

./: MANIFEST.in  README.md  pyproject.toml
docs/: env.example  usage.md
examples/: basic_usage.py  complete_flow.py  custom_user.py
src/oauth2fast_fastapi/: __init__.py  database.py  dependencies.py  settings.py
src/oauth2fast_fastapi/mail/: __init__.py  connection.py  service.py
src/oauth2fast_fastapi/mail/templates/: verification.html  welcome.html
src/oauth2fast_fastapi/models/: __init__.py  bases.py  mixins.py  user_model.py
src/oauth2fast_fastapi/routers/: base_router.py  users_router.py
src/oauth2fast_fastapi/schemas/: mixins.py  response_schemas.py  token_schema.py  user_schema.py  verification_schema.py
src/oauth2fast_fastapi/utils/: password_utils.py  token_utils.py  verification_utils.py
tests/: __init__.py  test_integration.py
